--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -6,3 +6,12 @@
 .logo {
     width: 80px;
 }
+
+.loginBlock {
+    float: right;
+    margin-right: 200px;
+}
+
+.loginBlock a {
+    color: aqua;
+}
